--- a/babyno.top/「文颜」Windows版已发布.html
+++ b/babyno.top/「文颜」Windows版已发布.html
@@ -5,7 +5,7 @@ title: 「文颜」Windows版已发布
 slug: wenyan-windows-version-released
 description: ""
 date: 2024-09-18 14:46:02
-draft: false
+draft: true
 ShowToc: true
 TocOpen: true
 tags:</p>
