--- a/informal.top/Weekly-#6 Cost of PopTranslate.html
+++ b/informal.top/Weekly-#6 Cost of PopTranslate.html
@@ -12,13 +12,13 @@
 <p>This is almost the end of stage 1 and must pay about $50 in the end of the month.</p>
 <p>2) Tranfer Translation from Google API to self hosted service.</p>
 <p>After I pubslished PopTranslate two week, the data is already stable, it shows as below:</p>
-<blockquote><p>active users: 18
-change: $27.12
-requests: 11k
-average requests: 611
-average characters per requests: 61
-average QPS: 0.12
-Google translation API price: $20/500k characters</p>
+<blockquote><p>active users: 18</p>
+<p>change: $27.12</p>
+<p>requests: 11k</p>
+<p>average requests: 611</p>
+<p>average characters per requests: 61</p>
+<p>average QPS: 0.12</p>
+<p>Google translation API price: $20/500k characters</p>
 </blockquote>
 <p>of course it's too expensive even I make the extension paid for user. so, I must tranfer it to self hosted service.</p>
 <p><a href="https://github.com/LibreTranslate/LibreTranslate">LibreTranslate</a> is the best option I have found, I'm trying to hosted this on Google VM, but it always not a ideal option because VM cost $30 per month, I can use it at least 3 months because $300 from Google is valid in 90 days. I will find a better solution after that.</p>
