--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -36,6 +36,7 @@ top: true</p>
 <p>MySQL isolation levels and how they work: <a href="https://planetscale.com/blog/mysql-isolation-levels-and-how-they-work">https://planetscale.com/blog/mysql-isolation-levels-and-how-they-work</a></p>
 <p>A Beginner’s Guide to the True Order of SQL Operations: <a href="https://blog.jooq.org/a-beginners-guide-to-the-true-order-of-sql-operations">https://blog.jooq.org/a-beginners-guide-to-the-true-order-of-sql-operations</a></p>
 <p>Falsehoods programmers believe in: <a href="https://github.com/kdeldycke/awesome-falsehood">https://github.com/kdeldycke/awesome-falsehood</a></p>
+<p>ASTs for Beginners by Kent C. Dodds: <a href="https://www.youtube.com/watch?v=CFQBHy8RCpg">https://www.youtube.com/watch?v=CFQBHy8RCpg</a></p>
 <hr/>
 <h2>Tools and Cool websites</h2>
 <p>Chrome urls: <a href="chrome://chrome-urls/">chrome://chrome-urls</a></p>
@@ -89,6 +90,10 @@ top: true</p>
 <p>A powerful media downloader with no bullshit: <a href="https://cobalt.tools">https://cobalt.tools</a></p>
 <p>A high-performance HTTP benchmarking tool written in Golang: <a href="https://github.com/six-ddc/plow">https://github.com/six-ddc/plow</a></p>
 <p>Netlify Celebrates 5 Million Developers | 3D Game: <a href="https://5-million-devs.netlify.com">https://5-million-devs.netlify.com</a></p>
+<p>VoidZero - Unified Toolchain for JavaScript: <a href="https://github.com/voidzero-dev">https://github.com/voidzero-dev</a></p>
+<p>Utilities to work with PDFs in Node.js, browser and workers: <a href="https://github.com/unjs/unpdf">https://github.com/unjs/unpdf</a></p>
+<p>The web-platform-tests Interop project: <a href="https://github.com/web-platform-tests/interop">https://github.com/web-platform-tests/interop</a></p>
+<p>Code transformer based on AST but providing a more intuitive API: <a href="https://github.com/thx/gogocode">https://github.com/thx/gogocode</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Modern CSS Solutions for Old CSS Problems: <a href="https://moderncss.dev">https://moderncss.dev</a></p>
@@ -167,6 +172,8 @@ top: true</p>
 <p>Modular data visualization framework: <a href="https://github.com/f5/unovis">https://github.com/f5/unovis</a></p>
 <p>Image comparison slider to compare images before and after: <a href="https://github.com/sneas/img-comparison-slider">https://github.com/sneas/img-comparison-slider</a></p>
 <p>CSS Custom Highlight API: <a href="https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API">https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API</a></p>
+<p>Highlight your plaintext via Shiki: <a href="https://github.com/KazariEX/plain-shiki">https://github.com/KazariEX/plain-shiki</a></p>
+<p>A headless UI library that works for a wide range of JS frameworks: <a href="https://github.com/chakra-ui/ark">https://github.com/chakra-ui/ark</a></p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: <a href="https://egghead.io/courses/the-beginner-s-guide-to-react">https://egghead.io/courses/the-beginner-s-guide-to-react</a> or <a href="https://www.youtube.com/watch?v=7_x4AuqHxlg">https://www.youtube.com/watch?v=7_x4AuqHxlg</a></p>
@@ -191,6 +198,7 @@ top: true</p>
 <p>Modern UI components to build your React app: <a href="https://dotui.org">https://dotui.org</a></p>
 <p>Type-safe search params state manager for Next.js: <a href="https://nuqs.47ng.com">https://nuqs.47ng.com</a></p>
 <p>React and the Vanishing Network: <a href="https://vanishing-network.epicreact.dev">https://vanishing-network.epicreact.dev</a></p>
+<p>UI Library for Design Engineers: <a href="https://github.com/magicuidesign/magicui">https://github.com/magicuidesign/magicui</a></p>
 <hr/>
 <h2>Vue and Vite ecosystem</h2>
 <p>Updates, tips &amp; opinions from the maintainers of Vue.js: <a href="https://blog.vuejs.org">https://blog.vuejs.org</a></p>
@@ -213,6 +221,7 @@ top: true</p>
 <p>Vue3 wrapper components for smooth-dnd: <a href="https://gilnd.github.io/vue3-smooth-dnd">https://gilnd.github.io/vue3-smooth-dnd</a></p>
 <p>Vue.js and Nuxt Tips, Tricks and good practice: <a href="https://vuejstips.com">https://vuejstips.com</a></p>
 <p>A type safe router for vuejs: <a href="https://github.com/kitbagjs/router">https://github.com/kitbagjs/router</a></p>
+<p>Enhance Vue ecosystem with libraries and tools: <a href="https://github.com/unovue">https://github.com/unovue</a></p>
 <hr/>
 <h2>Browsers related</h2>
 <p>Google Chrome upcoming schedule: <a href="https://chromiumdash.appspot.com/schedule">https://chromiumdash.appspot.com/schedule</a></p>
@@ -272,7 +281,8 @@ top: true</p>
 <p>Find the best cursor rules for your framework and language: <a href="https://cursor.directory">https://cursor.directory</a></p>
 <p>Internal Knowledge Base Preview: <a href="https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base">https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base</a></p>
 <p>React Components for AI Chat: <a href="https://github.com/Yonom/assistant-ui">https://github.com/Yonom/assistant-ui</a></p>
-<p>Using LLMs to reverse minified Javascript: <a href="https://thejunkland.com/blog/using-llms-to-reverse-javascript-minification">https://thejunkland.com/blog/using-llms-to-reverse-javascript-minification</a></p>
+<p>Introducing the Realtime API: <a href="https://openai.com/index/introducing-the-realtime-api">https://openai.com/index/introducing-the-realtime-api</a></p>
+<p>Improve performance and UX for client-side AI: <a href="https://web.dev/articles/client-side-ai-performance">https://web.dev/articles/client-side-ai-performance</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
