--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -224,4 +224,6 @@ html {
 </li>
 <li><p>The <code>white-space</code> CSS property sets how white space inside an element is handled. By default, the sequences of white space are collapsed. Newline characters in the source are handled the same as other white space. Use <code>white-space: pre-wrap;</code> to preserve spaces, tabs, and new lines.</p>
 </li>
+<li><p>CSS animations are pretty sweet, but they typically require explicit sizes, you couldn't use the intrinsic sizing keywords like <code>auto</code>, <code>min-content</code>, or <code>fit-content</code>. <a href="https://developer.chrome.com/docs/css-ui/animate-to-height-auto">From Chrome 129</a>, you can declare <code>interpolate-size: allow-keywords</code> on <code>:root</code> to enable transitioning to and from intrinsic sizing keywords for the entire document.</p>
+</li>
 </ul>
