--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -414,6 +414,34 @@ async function renderJSXToHTML(jsx) {
 }
 </code></pre>
 <ol>
+<li>Write your own React useState and useEffect hooks.</li>
+</ol>
+<pre><code class="lang-js">let hooks = [];
+let idx = 0;
+
+function useState(initVal) {
+  const state = hooks[idx] || initVal;
+  const _idx = idx;
+  const setState = newVal =&gt; {
+    hooks[_idx] = newVal;
+  };
+  idx++;
+  return [state, setState];
+}
+
+function useEffect(cb, depArray) {
+  const oldDeps = hooks[idx];
+  let hasChanged = true;
+
+  if (oldDeps) {
+    hasChanged = depArray.some((dep, i) =&gt; !Object.is(dep, oldDeps[i]));
+  }
+  if (hasChanged) cb();
+  hooks[idx] = depArray;
+  idx++;
+}
+</code></pre>
+<ol>
 <li>Implement a simplified version of Vue reactivity system.</li>
 </ol>
 <pre><code class="lang-js">let activeEffect = null;
