--- a/kexizeroing.github.io/Intro to Authorization and Authentication.html
+++ b/kexizeroing.github.io/Intro to Authorization and Authentication.html
@@ -151,6 +151,17 @@ const protect = async (req, res, next) =&gt; {
 <li>You should use OAuth when you want to access or modify data in another service on behalf of a user.</li>
 </ul>
 <p>Different SSO protocols share session information in different ways, but the essential concept is the same: there is a central domain, through which authentication is performed, and then the session is shared with other domains in some way.</p>
+<ol>
+<li>You try to log in to YouTube, and the application redirects you to the Identity Provider (IDP) for authentication.</li>
+<li>The IDP (Google) checks your credentials and confirms your identity. It creates a new session for you on its server and sets a session cookie in your browser.</li>
+<li>The IDP also creates a token for YouTube—a small piece of data that contains information about your identity.</li>
+<li>Your browser grabs the token and presents it to YouTube.</li>
+<li>YouTube checks the token, and if it is valid, lets you in.</li>
+<li>Then you want to access Google Drive, and the application redirects you to the IDP.</li>
+<li>The IDP recognizes that you are still logged in because you have the session cookie. It doesn't need to ask for your credentials.</li>
+<li>Instead, the IDP generates a new token for Drive.</li>
+<li>Your browser grabs the token and presents it to Google Drive. If the token is valid, Drive lets you in.</li>
+</ol>
 <p><strong>Central authentication service</strong>, or CAS, is a SSO protocol that allows websites to authenticate users. When a user attempts to access a web application that requires authentication, they are initially redirected to the CAS server for authentication. If authenticated, a service ticket is attached to the URL. When a user accesses another web application, the authentication is handled on the back end, and the user does not even have to be involved. Once the user signs in to the centralized authentication system, a cookie or system data is set to indicate authentication status without need for re-authentication multiple times in the same session.</p>
 <h3>Multi-factor authentication</h3>
 <p>MFA is when a user is required to input more than just a password to authenticate. For example, Two factor authentication (2FA) requires users to enter a code from another device in addition to their username and password. The device is the second "factor" (in addition to the password) that is used to verify the user's identity. With this, even if an attacker were able to determine a user's password, they wouldn't be able to log in without also having access to the user's phone. This makes it much harder for an attacker to gain access to a user's account.</p>
