--- a/kexizeroing.github.io/Learn from Advent of Vue 2022.html
+++ b/kexizeroing.github.io/Learn from Advent of Vue 2022.html
@@ -197,6 +197,19 @@ export interface UserProfile{
 defineProps&lt;UserProfile&gt;()
 &lt;/script&gt;
 </code></pre>
+<p>It is also possible to use both Options API and Composition API. Although you can access Composition API from the Options API, it’s a one-way street. The Composition API cannot access anything defined through the Options API.</p>
+<pre><code class="lang-js">export default {
+  setup() {
+    const darkMode = ref(false)
+    return { darkMode }
+  },
+  methods: {
+    saveDarkMode() {
+      localStorage.setItem('dark-mode', this.darkMode)
+    },
+  }
+}
+</code></pre>
 <h3>Custom Directives</h3>
 <pre><code class="lang-html">&lt;div class="w-full h-full flex flex-col justify-center items-center text-center gap-12"&gt;
   &lt;p v-christmas&gt;Red + Green (default)&lt;/p&gt;
