--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -61,8 +61,9 @@ new Vue({
 <li><a href="https://github.com/vuejs/create-vue">create-vue</a> 是 Vue 官方推出的一个脚手架，可以创建基于 Vite 的 Vue 基础模板。<code>npm init vue@3</code> 然后根据命令行的提示操作。</li>
 <li><a href="https://github.com/nuxt-contrib/vue3-ssr-starter">Vue 3 + SSR + Vite</a> Vue 3 + SSR 使用 Vite 进行开发的模板。</li>
 <li>如果不习惯 Vite，依然可以使用 <a href="https://cli.vuejs.org">Vue CLI</a> 作为开发脚手架，它使用的构建工具还是基于 Webpack。使用命令 <code>vue create hello-vue3</code> 根据提示创建项目。<em>(Vue CLI is in Maintenance Mode. For new projects, it is now recommended to use create-vue to scaffold Vite-based projects.)</em></li>
-<li><a href="https://blog.vuejs.org/posts/volar-1.0.html">Volar</a> 是 Vue 官方推荐的 VSCode 扩展 <em>(the official IDE/TS tooling support for Vue)</em>，用以代替 Vue 2 时代的 Vetur 插件。</li>
+<li><a href="https://blog.vuejs.org/posts/volar-1.0.html">Volar</a> 是 Vue 官方推荐的 VSCode 扩展，用以代替 Vue 2 时代的 Vetur 插件。<em>(Volar extension is deprecated. Use the Vue - Official extension instead.)</em></li>
 </ul>
+<p>The <a href="https://github.com/vuejs/language-tools">Vue Language Tools</a> are essential for providing language features such as autocompletion, type checking, and diagnostics when working with Vue’s SFCs. While <code>Volar</code> powers the language tools, the official extension for Vue is titled <code>Vue - Official</code> now on the VSCode marketplace.</p>
 <h3>一些 webpack 的配置</h3>
 <ul>
 <li>Webpack 5 boilerplate: <a href="https://github.com/taniarascia/webpack-boilerplate">https://github.com/taniarascia/webpack-boilerplate</a></li>
