--- a/kexizeroing.github.io/Screen and webcam recording.html
+++ b/kexizeroing.github.io/Screen and webcam recording.html
@@ -237,4 +237,5 @@ recorder.onstop = async () =&gt; {
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/MediaStream">https://developer.mozilla.org/en-US/docs/Web/API/MediaStream</a></li>
 <li><a href="https://www.mux.com/blog">https://www.mux.com/blog</a></li>
 <li><a href="https://github.com/alyssaxuu/screenity">https://github.com/alyssaxuu/screenity</a></li>
+<li><a href="https://github.com/coffeefuelbump/openai-real-time-api-example-corbinbrown">https://github.com/coffeefuelbump/openai-real-time-api-example-corbinbrown</a></li>
 </ul>
