--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -25,6 +25,7 @@ npx shadcn-ui@latest init
 <li>A Next.js 13 template for building apps with Radix UI and Tailwind CSS: <a href="https://github.com/shadcn-ui/next-template">https://github.com/shadcn-ui/next-template</a></li>
 <li>Vercel pre-built solutions: <a href="https://vercel.com/templates">https://vercel.com/templates</a></li>
 <li>Cloudflare workers: <a href="https://github.com/cloudflare/workers-sdk">https://github.com/cloudflare/workers-sdk</a></li>
+<li>An example deploying Next / Postgres / Nginx to a Ubuntu Linux server: <a href="https://github.com/leerob/next-self-host">https://github.com/leerob/next-self-host</a></li>
 </ul>
 <p>A typical full stack web application with Next.js, React, shadcn/ui, Prisma, and MySQL:</p>
 <ul>
