--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -29,6 +29,18 @@ export class Square {}
 
 export { name, draw, reportArea, reportPerimeter };
 </code></pre>
+<p>A module can also "relay" values exported from other modules without the hassle of writing two separate import/export statements. This is often useful when creating a single module concentrating various exports from various modules (usually called a "barrel module").</p>
+<pre><code class="lang-js">export { default as function1, function2 } from "bar.js";
+// Which is comparable to a combination of import and export
+import { default as function1, function2 } from "bar.js";
+export { function1, function2 };
+
+// Barrel file is a module that only re-export other modules
+export { x } from "mod";
+export { x as v } from "mod";
+export * as ns from "mod";
+</code></pre>
+<p>There is also <code>export * from "mod"</code>, although there's no <code>import * from "mod"</code>. This re-exports all named exports from <code>mod</code> as the named exports of the current module, but the default export of mod is not re-exported.</p>
 <h3>Importing features into script</h3>
 <p>Once you've exported some features out of your module, you need to import them into your script to be able to use them. Use the <code>import</code> statement, followed by a comma-separated list of the features you want to import <strong>wrapped in curly braces</strong>, followed by the keyword <code>from</code>, followed by the path to the module file. Once you've imported the features into your script, you can use them just like they were defined inside the same file.</p>
 <pre><code class="lang-javascript">import { name, draw, reportArea, reportPerimeter } from './modules/square.js';
