--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8911 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8914 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=informal.top/Weekly-%237%20Staying%20home.html>2024-10-10 Weekly-#7 Staying home</a></li>
+
+<li><a href=lutaonan.com/AI%20%E5%92%8C%E5%86%99%E4%BD%9C.html>2024-10-09 AI 和写作</a></li>
+
+<li><a href=conge.livingwithfcs.org/2024%20%E4%B9%9D%E6%9C%88%E8%AF%BB%E6%80%A7%E5%88%AB%E7%A0%94%E7%A9%B6%EF%BC%8C%E8%A7%89%E9%86%92%EF%BC%8C%E8%B7%91%E6%AD%A5%EF%BC%8C%E6%AD%8C%E5%BE%B7%EF%BC%8C%E8%8C%A8%E7%BB%B4%E6%A0%BC%EF%BC%8C%E9%BB%84%E6%98%93%E2%80%A6%E2%80%A618%E6%9C%AC.html>2024-10-07 2024 九月读性别研究，觉醒，跑步，歌德，茨维格，黄易……18本</a></li>
 
 <li><a href=mabbs.github.io/%E5%A6%82%E4%BD%95%E7%BB%99%E5%8D%9A%E5%AE%A2%E6%B7%BB%E5%8A%A0%E7%9B%B8%E4%BC%BC%E6%96%87%E7%AB%A0%E6%8E%A8%E8%8D%90%E5%8A%9F%E8%83%BD.html>2024-10-01 如何给博客添加相似文章推荐功能</a></li>
 
@@ -2591,7 +2597,7 @@
 
 <li><a href=shiina18.github.io/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0%E6%80%A7%E8%83%BD%E7%93%B6%E9%A2%88%E5%BE%80%E5%BE%80%E6%98%AF%E5%86%85%E5%AD%98%E5%B8%A6%E5%AE%BD.html>2022-10-16 深度学习性能瓶颈往往是内存带宽</a></li>
 
-<li><a href=kexizeroing.github.io/Module%20bundler%20clone.html>2022-10-15 Module bundler clone</a></li>
+<li><a href=kexizeroing.github.io/Module%20bundler%20and%20code%20transformation.html>2022-10-15 Module bundler and code transformation</a></li>
 
 <li><a href=kexizeroing.github.io/State%20management%20clone.html>2022-10-15 State management clone</a></li>
 
@@ -2599,7 +2605,7 @@
 
 <li><a href=kexizeroing.github.io/Notes%20on%20work%20projects%20%28in%20Chinese%29.html>2022-10-14 Notes on work projects (in Chinese)</a></li>
 
-<li><a href=kexizeroing.github.io/React%20hooks%20clone.html>2022-10-14 React hooks clone</a></li>
+<li><a href=kexizeroing.github.io/React%20hooks%20clone%20and%20related%20concepts.html>2022-10-14 React hooks clone and related concepts</a></li>
 
 <li><a href=kexizeroing.github.io/The%20end%20of%20localhost.html>2022-10-14 The end of localhost</a></li>
 
