--- a/kexizeroing.github.io/Type challenges solutions.html
+++ b/kexizeroing.github.io/Type challenges solutions.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 6</p>
-<h2>updatedDate: "Sep 30 2024"</h2>
+<h2>updatedDate: "Oct 9 2024"</h2>
 <p>Implement the built-in <code>Pick&lt;T, K&gt;</code> generic without using it. Constructs a type by picking the set of properties K from T.</p>
 <pre><code class="lang-ts">interface Todo {
   title: string;
@@ -52,6 +52,49 @@ type MyReadonly&lt;T&gt; = {
   readonly [P in keyof T]: T[P]
 }
 </code></pre>
+<p>Implement a generic <code>MyReadonly2&lt;T, K&gt;</code> which takes two type arguments T and K. K specify the set of properties of T that should set to readonly. When K is not provided, it should make all properties readonly, just like the normal <code>Readonly&lt;T&gt;</code>.</p>
+<pre><code class="lang-ts">// step 1. intersection of both types
+type MyReadonly2&lt;T, K&gt; = Omit&lt;T, K&gt; &amp; { readonly [P in K]: T[P] };
+
+// step 2. set a constraint on K
+type MyReadonly2&lt;T, K extends keyof T&gt; = Omit&lt;T, K&gt; &amp; { readonly [P in K]: T[P] };
+
+// step 3. when K is not set at all (K to be “all the keys from T”)
+type MyReadonly2&lt;T, K extends keyof T = keyof T&gt; = Omit&lt;T, K&gt; &amp; {
+  readonly [P in K]: T[P];
+};
+</code></pre>
+<p>Implement a generic <code>DeepReadonly&lt;T&gt;</code> which makes every parameter of an object and its sub-objects readonly recursively.</p>
+<pre><code class="lang-ts">type X = {
+  x: {
+    a: 1;
+    b: "hi";
+  };
+  y: "hey";
+};
+
+type Expected = {
+  readonly x: {
+    readonly a: 1;
+    readonly b: "hi";
+  };
+  readonly y: "hey";
+};
+
+// solution
+type DeepReadonly&lt;T&gt; = {
+  readonly [P in keyof T]: T[P] extends string | number | boolean | Function 
+    ? T[P] 
+    : DeepReadonly&lt;T[P]&gt;
+}
+
+// or
+type DeepReadonly&lt;T&gt; = {
+  readonly [P in keyof T]: T[P] extends Record&lt;string, unknown&gt;
+    ? DeepReadonly&lt;T[P]&gt;
+    : T[P];
+};
+</code></pre>
 <p>Given an array, transform to an object type and the key/value must in the given array.</p>
 <pre><code class="lang-ts">const tuple = ["tesla", "model 3", "model X", "model Y"] as const;
 
@@ -80,6 +123,15 @@ type head2 = First&lt;arr2&gt;; // expected to be 3
 
 // solution
 type First&lt;T extends any[]&gt; = T extends [] ? never : T[0];
+</code></pre>
+<p>Implement a generic <code>Last&lt;T&gt;</code> that takes an Array T and returns it's last element's type.</p>
+<pre><code class="lang-ts">type arr = ["a", "b", "c"];
+type tail = Last&lt;arr&gt;; // expected to be 'c'
+
+// solution
+// It is a hint to use **variadic tuple types**; we have an array and we need to work with its elements.
+// https://fettblog.eu/variadic-tuple-types-preview/
+type Last&lt;T extends any[]&gt; = T extends [...infer X, infer L] ? L : never;
 </code></pre>
 <p>For given a tuple, you need create a generic <code>Length</code>, pick the length of the tuple.</p>
 <pre><code class="lang-ts">type tesla = ["tesla", "model 3", "model X", "model Y"];
@@ -117,8 +169,99 @@ type If&lt;C extends boolean, T, F&gt; = C extends undefined | null
   ? never
   : (C extends true ? T : F)
 </code></pre>
-<p>Implement the <code>Array.concat</code> function in the type system. A type takes the two arguments. The output should be a new array that includes inputs in ltr order.</p>
+<p>Implement the JavaScript <code>Array.concat</code> function in the type system. A type takes the two arguments. The output should be a new array that includes inputs in ltr order.</p>
 <pre><code class="lang-ts">type Result = Concat&lt;[1], [2]&gt;; // expected to be [1, 2]
 // solution
 type Concat&lt;T extends unknown[], U extends unknown[]&gt; = [...T, ...U];
+</code></pre>
+<p>Implement the JavaScript <code>Array.includes</code> function in the type system. A type takes the two arguments. The output should be a boolean true or false.</p>
+<pre><code class="lang-ts">// expected to be `false`
+type isFruit = Includes&lt;['apple', 'banana', 'orange'], 'dog'&gt; // expected to be `false`
+
+// solution
+type Includes&lt;T extends unknown[], U&gt; = U extends T[number] ? true : false;
+</code></pre>
+<p>Implement the generic version of <code>Array.push</code> and <code>Array.unshift()</code>.</p>
+<pre><code class="lang-ts">type Result = Push&lt;[1, 2], "3"&gt;;  // [1, 2, '3']
+type Result = Unshift&lt;[1, 2], 0&gt;; // [0, 1, 2]
+
+// solution
+type Push&lt;T extends unknown[], U&gt; = [...T, U];
+type Unshift&lt;T extends unknown[], U&gt; = [U, ...T];
+</code></pre>
+<p>Implement a generic <code>Pop&lt;T&gt;</code> that takes an Array T and returns an Array without it's last element.</p>
+<pre><code class="lang-ts">type arr = ["a", "b", "c", "d"];
+type arr1 = Pop&lt;arr&gt;; // expected to be ['a', 'b', 'c']
+
+// solution
+type Pop&lt;T extends any[]&gt; = T extends [...infer H, infer T] ? H : never;
+</code></pre>
+<p>Implement the built-in <code>Parameters&lt;T&gt;</code> generic without using it.</p>
+<pre><code class="lang-ts">const foo = (arg1: string, arg2: number): void =&gt; {...}
+type FunctionParamsType = MyParameters&lt;typeof foo&gt; // expected [string, number]
+
+// solution
+type MyParameters&lt;T&gt; = T extends (...args: infer P) =&gt; any ? P : never;
+</code></pre>
+<p>Implement the built-in <code>ReturnType&lt;T&gt;</code> generic without using it.</p>
+<pre><code class="lang-ts">const fn = (v: boolean) =&gt; {
+  if (v) return 1;
+  else return 2;
+};
+type a = MyReturnType&lt;typeof fn&gt;; // should be "1 | 2"
+
+// solution
+type MyReturnType&lt;T&gt; = T extends (...args: any[]) =&gt; infer P ? P : never
+</code></pre>
+<p>Implement the built-in <code>Omit&lt;T, K&gt;</code> generic without using it. Constructs a type by picking all properties from T and then removing K.</p>
+<pre><code class="lang-ts">interface Todo {
+  title: string;
+  description: string;
+  completed: boolean;
+}
+
+type TodoPreview = MyOmit&lt;Todo, "description" | "title"&gt;;
+
+const todo: TodoPreview = {
+  completed: false,
+};
+
+// solution
+// https://www.typescriptlang.org/docs/handbook/release-notes/typescript-4-1.html#key-remapping-in-mapped-types
+// 1. a mapped type can create new object types: type Options&lt;T&gt; = { [P in keyof T]: T[P] };
+// 2. re-map keys (`as`) in mapped types to create new keys, or filter out keys
+// 3. filter out keys by producing never
+type MyOmit&lt;T, K&gt; = { [P in keyof T as P extends K ? never : P]: T[P] };
+</code></pre>
+<p>Implement a generic <code>TupleToUnion&lt;T&gt;</code> which covers the values of a tuple to its values union.</p>
+<pre><code class="lang-ts">type Arr = ['1', 2, boolean]
+type Test = TupleToUnion&lt;Arr&gt; // expected '1' | 2 | boolean
+
+// solution
+// lookup types: looks like an element access, but are written as types
+type TupleToUnion&lt;T&gt; = T extends unknown[] ? T[number] : never
+</code></pre>
+<p>Type the function <code>PromiseAll</code> that accepts an array of <code>PromiseLike</code> objects. The returning value should be <code>Promise&lt;T&gt;</code> where T is the resolved result array.</p>
+<pre><code class="lang-ts">const promise1 = Promise.resolve(3);
+const promise2 = 42;
+const promise3 = new Promise&lt;string&gt;((resolve, reject) =&gt; {
+  setTimeout(resolve, 100, "foo");
+});
+
+// expected to be `Promise&lt;[number, number, string]&gt;`
+const p = Promise.all([promise1, promise2, promise3] as const);
+
+// solution
+// step 1. the function that returns Promise&lt;T&gt;
+declare function PromiseAll&lt;T&gt;(values: T): Promise&lt;T&gt;;
+
+// step 2. `values` is an array and has a readonly modifier 
+declare function PromiseAll&lt;T extends unknown[]&gt;(
+  values: readonly [...T],
+): Promise&lt;T&gt;;
+
+// step 3. unwrap the type from Promise inside the `values`
+declare function PromiseAll&lt;T extends unknown[]&gt;(
+  values: readonly [...T],
+): Promise&lt;{ [P in keyof T]: T[P] extends Promise&lt;infer R&gt; ? R : T[P] }&gt;;
 </code></pre>
